more refactoring, and performance improvements